--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -11,7 +11,7 @@
 }
 
 .homepage-wrapper {
-  padding-top: 60px;
+  padding-top: 0px;
   font-family: 'Outfit', sans-serif;
   
 }
@@ -27,10 +27,11 @@
   height: 500px;
   position: relative;
   flex-wrap: nowrap;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
 }
 
 .homepage-slideshow-wrapper {
+  margin-top: 60px;
   position: relative;
   width: 70%;
   max-width: 700px;
@@ -95,6 +96,7 @@
   display: block;
   margin-left: auto;
   margin-right: 60px;
+  margin-top: 60px;
 }
 
 
