--- a/src/pages/Pentemind.css
+++ b/src/pages/Pentemind.css
@@ -170,6 +170,23 @@
 }
 
 @media (max-width: 450px) {
+  .pentemind {
+  margin-top: -60px;
+}
+.pentemind-section {
+  padding: 3rem 1rem;
+  background: linear-gradient(to right, var(--violet-1), var(--violet-2));
+  color: var(--white);
+  margin-top: 00px;
+}
+.pentemind-image-card {
+  background-color: var(--white);
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  flex: 1 1 350px;
+  margin-top: 120px;
+}
   .monkey-cards-section {
     padding: 40px 10px;
   }
