--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -49,7 +49,8 @@
 }
 
 .contact-subheading {
-  font-size: 32px;
+  font-size: 42px;
+  font-weight: 700;
   margin-bottom: 25px;
   letter-spacing: 1px;
   animation: fadeIn 2s ease-out;
